# SFML_Checkers

./: CMakeLists.txt  Checker.cpp  Checker.h  Object.cpp  Object.h  PlayField.cpp  PlayField.h  main.cpp
textures/: board.psd
